--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "antd": "^3.24.3",
     "axios": "^0.19.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "dagre": "^0.8.5",
+    "graphlib": "^2.1.8",
     "html2canvas": "^1.0.0-rc.5",
     "jointjs": "^3.1.1",
     "qs": "^6.9.0",
