--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "save-svg-as-png": "^1.4.17"
   }
 }
